Tests/typing/bad/testfile-struct-1.jl
function f(x) x.a end  # aucun champ a
